# play-with-postgres

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
scripts/: random_user.py
sqls/: 1-init.sql  user_table.sql
src/: database.py
